henrio/lang/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    OR
    IS
    ELIF
    ELSE
    DEL

Grammar

Rule 0     S' -> file_input_end
Rule 1     stmt -> IMPORT IMPNAME
Rule 2     stmt -> IMPORT IMPNAME AS VAR
Rule 3     stmt -> IMPORT VAR
Rule 4     stmt -> IMPORT VAR AS VAR
Rule 5     stmt -> VAR EQUALS expression
Rule 6     csa -> VAR
Rule 7     csa -> csa COMMA VAR
Rule 8     fargs -> LPAREN csa RPAREN
Rule 9     fargs -> LPAREN csa COMMA RPAREN
Rule 10    fargs -> LPAREN RPAREN
Rule 11    stmts -> stmt
Rule 12    stmts -> stmts NEWLINE stmt
Rule 13    stmts -> stmts NEWLINE
Rule 14    stmt -> RETURN expression
Rule 15    stmt -> if_stmt
Rule 16    stmt -> funcdef
Rule 17    stmt -> expression
Rule 18    if_stmt -> IF expression body
Rule 19    body -> LBRACE stmts RBRACE
Rule 20    body -> LBRACE RBRACE
Rule 21    csv -> expression
Rule 22    csv -> csv COMMA expression
Rule 23    tuple -> LPAREN csv RPAREN
Rule 24    tuple -> LPAREN csv COMMA RPAREN
Rule 25    tuple -> LPAREN RPAREN
Rule 26    expression -> expression tuple
Rule 27    funcdef -> FXN VAR fargs body
Rule 28    expression -> expression DOT VAR
Rule 29    expression -> STRING
Rule 30    expression -> INT
Rule 31    expression -> FLOAT
Rule 32    expression -> COMPLEX
Rule 33    expression -> VAR
Rule 34    expression -> tuple
Rule 35    expression -> LBRACE csv RBRACE
Rule 36    expression -> LBRACE csv COMMA RBRACE
Rule 37    expression -> LBRACE RBRACE
Rule 38    expression -> LBRACKET csv RBRACKET
Rule 39    expression -> LBRACKET csv COMMA RBRACKET
Rule 40    expression -> LBRACKET RBRACKET
Rule 41    expression -> expression PLUS expression
Rule 42    expression -> expression MINUS expression
Rule 43    expression -> expression TIMES expression
Rule 44    expression -> expression DIVIDE expression
Rule 45    expression -> expression POWER expression
Rule 46    expression -> MINUS expression
Rule 47    expression -> INVERT expression
Rule 48    expression -> LPAREN expression RPAREN
Rule 49    expression -> TRUE
Rule 50    expression -> FALSE
Rule 51    file_input_end -> file_input
Rule 52    file_input -> file_input NEWLINE
Rule 53    file_input -> file_input stmt
Rule 54    file_input -> NEWLINE
Rule 55    file_input -> stmt

Terminals, with rules where they appear

AND                  : 
AS                   : 2 4
COMMA                : 7 9 22 24 36 39
COMPLEX              : 32
DEL                  : 
DIVIDE               : 44
DOT                  : 28
ELIF                 : 
ELSE                 : 
EQUALS               : 5
FALSE                : 50
FLOAT                : 31
FXN                  : 27
IF                   : 18
IMPNAME              : 1 2
IMPORT               : 1 2 3 4
INT                  : 30
INVERT               : 47
IS                   : 
LBRACE               : 19 20 35 36 37
LBRACKET             : 38 39 40
LPAREN               : 8 9 10 23 24 25 48
MINUS                : 42 46
NEWLINE              : 12 13 52 54
OR                   : 
PLUS                 : 41
POWER                : 45
RBRACE               : 19 20 35 36 37
RBRACKET             : 38 39 40
RETURN               : 14
RPAREN               : 8 9 10 23 24 25 48
STRING               : 29
TIMES                : 43
TRUE                 : 49
VAR                  : 2 3 4 4 5 6 7 27 28 33
error                : 

Nonterminals, with rules where they appear

body                 : 18 27
csa                  : 7 8 9
csv                  : 22 23 24 35 36 38 39
expression           : 5 14 17 18 21 22 26 28 41 41 42 42 43 43 44 44 45 45 46 47 48
fargs                : 27
file_input           : 51 52 53
file_input_end       : 0
funcdef              : 16
if_stmt              : 15
stmt                 : 11 12 53 55
stmts                : 12 13 19
tuple                : 26 34

Parsing method: LALR

state 0

    (0) S' -> . file_input_end
    (51) file_input_end -> . file_input
    (52) file_input -> . file_input NEWLINE
    (53) file_input -> . file_input stmt
    (54) file_input -> . NEWLINE
    (55) file_input -> . stmt
    (1) stmt -> . IMPORT IMPNAME
    (2) stmt -> . IMPORT IMPNAME AS VAR
    (3) stmt -> . IMPORT VAR
    (4) stmt -> . IMPORT VAR AS VAR
    (5) stmt -> . VAR EQUALS expression
    (14) stmt -> . RETURN expression
    (15) stmt -> . if_stmt
    (16) stmt -> . funcdef
    (17) stmt -> . expression
    (18) if_stmt -> . IF expression body
    (27) funcdef -> . FXN VAR fargs body
    (26) expression -> . expression tuple
    (28) expression -> . expression DOT VAR
    (29) expression -> . STRING
    (30) expression -> . INT
    (31) expression -> . FLOAT
    (32) expression -> . COMPLEX
    (33) expression -> . VAR
    (34) expression -> . tuple
    (35) expression -> . LBRACE csv RBRACE
    (36) expression -> . LBRACE csv COMMA RBRACE
    (37) expression -> . LBRACE RBRACE
    (38) expression -> . LBRACKET csv RBRACKET
    (39) expression -> . LBRACKET csv COMMA RBRACKET
    (40) expression -> . LBRACKET RBRACKET
    (41) expression -> . expression PLUS expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression TIMES expression
    (44) expression -> . expression DIVIDE expression
    (45) expression -> . expression POWER expression
    (46) expression -> . MINUS expression
    (47) expression -> . INVERT expression
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . TRUE
    (50) expression -> . FALSE
    (23) tuple -> . LPAREN csv RPAREN
    (24) tuple -> . LPAREN csv COMMA RPAREN
    (25) tuple -> . LPAREN RPAREN

    NEWLINE         shift and go to state 3
    IMPORT          shift and go to state 5
    VAR             shift and go to state 6
    RETURN          shift and go to state 8
    IF              shift and go to state 11
    FXN             shift and go to state 12
    STRING          shift and go to state 14
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    COMPLEX         shift and go to state 17
    LBRACE          shift and go to state 18
    LBRACKET        shift and go to state 19
    MINUS           shift and go to state 20
    INVERT          shift and go to state 21
    LPAREN          shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24

    file_input_end                 shift and go to state 1
    file_input                     shift and go to state 2
    stmt                           shift and go to state 4
    expression                     shift and go to state 7
    if_stmt                        shift and go to state 9
    funcdef                        shift and go to state 10
    tuple                          shift and go to state 13

state 1

    (0) S' -> file_input_end .



state 2

    (51) file_input_end -> file_input .
    (52) file_input -> file_input . NEWLINE
    (53) file_input -> file_input . stmt
    (1) stmt -> . IMPORT IMPNAME
    (2) stmt -> . IMPORT IMPNAME AS VAR
    (3) stmt -> . IMPORT VAR
    (4) stmt -> . IMPORT VAR AS VAR
    (5) stmt -> . VAR EQUALS expression
    (14) stmt -> . RETURN expression
    (15) stmt -> . if_stmt
    (16) stmt -> . funcdef
    (17) stmt -> . expression
    (18) if_stmt -> . IF expression body
    (27) funcdef -> . FXN VAR fargs body
    (26) expression -> . expression tuple
    (28) expression -> . expression DOT VAR
    (29) expression -> . STRING
    (30) expression -> . INT
    (31) expression -> . FLOAT
    (32) expression -> . COMPLEX
    (33) expression -> . VAR
    (34) expression -> . tuple
    (35) expression -> . LBRACE csv RBRACE
    (36) expression -> . LBRACE csv COMMA RBRACE
    (37) expression -> . LBRACE RBRACE
    (38) expression -> . LBRACKET csv RBRACKET
    (39) expression -> . LBRACKET csv COMMA RBRACKET
    (40) expression -> . LBRACKET RBRACKET
    (41) expression -> . expression PLUS expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression TIMES expression
    (44) expression -> . expression DIVIDE expression
    (45) expression -> . expression POWER expression
    (46) expression -> . MINUS expression
    (47) expression -> . INVERT expression
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . TRUE
    (50) expression -> . FALSE
    (23) tuple -> . LPAREN csv RPAREN
    (24) tuple -> . LPAREN csv COMMA RPAREN
    (25) tuple -> . LPAREN RPAREN

    $end            reduce using rule 51 (file_input_end -> file_input .)
    NEWLINE         shift and go to state 25
    IMPORT          shift and go to state 5
    VAR             shift and go to state 6
    RETURN          shift and go to state 8
    IF              shift and go to state 11
    FXN             shift and go to state 12
    STRING          shift and go to state 14
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    COMPLEX         shift and go to state 17
    LBRACE          shift and go to state 18
    LBRACKET        shift and go to state 19
    MINUS           shift and go to state 20
    INVERT          shift and go to state 21
    LPAREN          shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24

    stmt                           shift and go to state 26
    expression                     shift and go to state 7
    if_stmt                        shift and go to state 9
    funcdef                        shift and go to state 10
    tuple                          shift and go to state 13

state 3

    (54) file_input -> NEWLINE .

    NEWLINE         reduce using rule 54 (file_input -> NEWLINE .)
    IMPORT          reduce using rule 54 (file_input -> NEWLINE .)
    VAR             reduce using rule 54 (file_input -> NEWLINE .)
    RETURN          reduce using rule 54 (file_input -> NEWLINE .)
    IF              reduce using rule 54 (file_input -> NEWLINE .)
    FXN             reduce using rule 54 (file_input -> NEWLINE .)
    STRING          reduce using rule 54 (file_input -> NEWLINE .)
    INT             reduce using rule 54 (file_input -> NEWLINE .)
    FLOAT           reduce using rule 54 (file_input -> NEWLINE .)
    COMPLEX         reduce using rule 54 (file_input -> NEWLINE .)
    LBRACE          reduce using rule 54 (file_input -> NEWLINE .)
    LBRACKET        reduce using rule 54 (file_input -> NEWLINE .)
    MINUS           reduce using rule 54 (file_input -> NEWLINE .)
    INVERT          reduce using rule 54 (file_input -> NEWLINE .)
    LPAREN          reduce using rule 54 (file_input -> NEWLINE .)
    TRUE            reduce using rule 54 (file_input -> NEWLINE .)
    FALSE           reduce using rule 54 (file_input -> NEWLINE .)
    $end            reduce using rule 54 (file_input -> NEWLINE .)


state 4

    (55) file_input -> stmt .

    NEWLINE         reduce using rule 55 (file_input -> stmt .)
    IMPORT          reduce using rule 55 (file_input -> stmt .)
    VAR             reduce using rule 55 (file_input -> stmt .)
    RETURN          reduce using rule 55 (file_input -> stmt .)
    IF              reduce using rule 55 (file_input -> stmt .)
    FXN             reduce using rule 55 (file_input -> stmt .)
    STRING          reduce using rule 55 (file_input -> stmt .)
    INT             reduce using rule 55 (file_input -> stmt .)
    FLOAT           reduce using rule 55 (file_input -> stmt .)
    COMPLEX         reduce using rule 55 (file_input -> stmt .)
    LBRACE          reduce using rule 55 (file_input -> stmt .)
    LBRACKET        reduce using rule 55 (file_input -> stmt .)
    MINUS           reduce using rule 55 (file_input -> stmt .)
    INVERT          reduce using rule 55 (file_input -> stmt .)
    LPAREN          reduce using rule 55 (file_input -> stmt .)
    TRUE            reduce using rule 55 (file_input -> stmt .)
    FALSE           reduce using rule 55 (file_input -> stmt .)
    $end            reduce using rule 55 (file_input -> stmt .)


state 5

    (1) stmt -> IMPORT . IMPNAME
    (2) stmt -> IMPORT . IMPNAME AS VAR
    (3) stmt -> IMPORT . VAR
    (4) stmt -> IMPORT . VAR AS VAR

    IMPNAME         shift and go to state 27
    VAR             shift and go to state 28


state 6

    (5) stmt -> VAR . EQUALS expression
    (33) expression -> VAR .

    EQUALS          shift and go to state 29
    DOT             reduce using rule 33 (expression -> VAR .)
    PLUS            reduce using rule 33 (expression -> VAR .)
    MINUS           reduce using rule 33 (expression -> VAR .)
    TIMES           reduce using rule 33 (expression -> VAR .)
    DIVIDE          reduce using rule 33 (expression -> VAR .)
    POWER           reduce using rule 33 (expression -> VAR .)
    LPAREN          reduce using rule 33 (expression -> VAR .)
    NEWLINE         reduce using rule 33 (expression -> VAR .)
    IMPORT          reduce using rule 33 (expression -> VAR .)
    VAR             reduce using rule 33 (expression -> VAR .)
    RETURN          reduce using rule 33 (expression -> VAR .)
    IF              reduce using rule 33 (expression -> VAR .)
    FXN             reduce using rule 33 (expression -> VAR .)
    STRING          reduce using rule 33 (expression -> VAR .)
    INT             reduce using rule 33 (expression -> VAR .)
    FLOAT           reduce using rule 33 (expression -> VAR .)
    COMPLEX         reduce using rule 33 (expression -> VAR .)
    LBRACE          reduce using rule 33 (expression -> VAR .)
    LBRACKET        reduce using rule 33 (expression -> VAR .)
    INVERT          reduce using rule 33 (expression -> VAR .)
    TRUE            reduce using rule 33 (expression -> VAR .)
    FALSE           reduce using rule 33 (expression -> VAR .)
    $end            reduce using rule 33 (expression -> VAR .)
    RBRACE          reduce using rule 33 (expression -> VAR .)


state 7

    (17) stmt -> expression .
    (26) expression -> expression . tuple
    (28) expression -> expression . DOT VAR
    (41) expression -> expression . PLUS expression
    (42) expression -> expression . MINUS expression
    (43) expression -> expression . TIMES expression
    (44) expression -> expression . DIVIDE expression
    (45) expression -> expression . POWER expression
    (23) tuple -> . LPAREN csv RPAREN
    (24) tuple -> . LPAREN csv COMMA RPAREN
    (25) tuple -> . LPAREN RPAREN

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    NEWLINE         reduce using rule 17 (stmt -> expression .)
    IMPORT          reduce using rule 17 (stmt -> expression .)
    VAR             reduce using rule 17 (stmt -> expression .)
    RETURN          reduce using rule 17 (stmt -> expression .)
    IF              reduce using rule 17 (stmt -> expression .)
    FXN             reduce using rule 17 (stmt -> expression .)
    STRING          reduce using rule 17 (stmt -> expression .)
    INT             reduce using rule 17 (stmt -> expression .)
    FLOAT           reduce using rule 17 (stmt -> expression .)
    COMPLEX         reduce using rule 17 (stmt -> expression .)
    LBRACE          reduce using rule 17 (stmt -> expression .)
    LBRACKET        reduce using rule 17 (stmt -> expression .)
    INVERT          reduce using rule 17 (stmt -> expression .)
    TRUE            reduce using rule 17 (stmt -> expression .)
    FALSE           reduce using rule 17 (stmt -> expression .)
    $end            reduce using rule 17 (stmt -> expression .)
    RBRACE          reduce using rule 17 (stmt -> expression .)
    DOT             shift and go to state 31
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    POWER           shift and go to state 36
    LPAREN          shift and go to state 37

  ! MINUS           [ reduce using rule 17 (stmt -> expression .) ]
  ! LPAREN          [ reduce using rule 17 (stmt -> expression .) ]

    tuple                          shift and go to state 30

state 8

    (14) stmt -> RETURN . expression
    (26) expression -> . expression tuple
    (28) expression -> . expression DOT VAR
    (29) expression -> . STRING
    (30) expression -> . INT
    (31) expression -> . FLOAT
    (32) expression -> . COMPLEX
    (33) expression -> . VAR
    (34) expression -> . tuple
    (35) expression -> . LBRACE csv RBRACE
    (36) expression -> . LBRACE csv COMMA RBRACE
    (37) expression -> . LBRACE RBRACE
    (38) expression -> . LBRACKET csv RBRACKET
    (39) expression -> . LBRACKET csv COMMA RBRACKET
    (40) expression -> . LBRACKET RBRACKET
    (41) expression -> . expression PLUS expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression TIMES expression
    (44) expression -> . expression DIVIDE expression
    (45) expression -> . expression POWER expression
    (46) expression -> . MINUS expression
    (47) expression -> . INVERT expression
    (48) expression -> . LPAREN expression RPAREN
    (49) expression -> . TRUE
    (50) expression -> . FALSE
    (23) tuple -> . LPAREN csv RPAREN
    (24) tuple -> . LPAREN csv COMMA RPAREN
    (25) tuple -> . LPAREN RPAREN

    STRING          shift and go to state 14
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    COMPLEX         shift and go to state 17
    VAR             shift and go to state 39
    LBRACE          shift and go to state 18
    LBRACKET        shift and go to state 19
    MINUS           shift and go to state 20
    INVERT          shift and go to state 21
    LPAREN          shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24

    expression                     shift and go to state 38
    tuple                          shift and go to state 13

state 9

    (15) stmt -> if_stmt .

    NEWLINE         reduce using rule 15 (stmt -> if_stmt .)
    IMPORT          reduce using rule 15 (stmt -> if_stmt .)
    VAR             reduce using rule 15 (stmt -> if_stmt .)
    RETURN          reduce using rule 15 (stmt -> if_stmt .)
    IF              reduce using rule 15 (stmt -> if_stmt .)
    FXN             reduce using rule 15 (stmt -> if_stmt .)
    STRING          reduce using rule 15 (stmt -> if_stmt .)
    INT             reduce using rule 15 (stmt -> if_stmt .)
    FLOAT           reduce using rule 15 (stmt -> if_stmt .)
    COMPLEX         reduce using rule 15 (stmt -> if_stmt .)
    LBRACE          reduce using rule 15 (stmt -> if_stmt .)
    LBRACKET        reduce using rule 15 (stmt -> if_stmt .)
    MINUS           reduce using rule 15 (stmt -> if_stmt .)
    INVERT          reduce using rule 15 (stmt -> if_stmt .)
    LPAREN          reduce using rule 15 (stmt -> if_stmt .)
    TRUE            reduce using rule 15 (stmt -> if_stmt .)
    FALSE           reduce using rule 15 (stmt -> if_stmt .)
    $end            reduce using rule 15 (stmt -> if_stmt .)
    RBRACE          reduce using rule 15 (stmt -> if_stmt .)


state 10

    (16) stmt -> funcdef .

    NEWLINE         reduce using rule 16 (stmt -> funcdef .)
    IMPORT          reduce using rule 16 (stmt -> funcdef .)
    VAR             reduce using rule 16 (stmt -> funcdef .)
    RETURN          reduce using rule 16 (stmt -> funcdef .)
    IF              reduce using rule 16 (stmt -> funcdef .)
    FXN             reduce using rule 16 (stmt -> funcdef .)
    STRING          reduce using rule 16 (stmt -> funcdef .)
    INT             reduce using rule 16 (stmt -> funcdef .)
    FLOAT           reduce using rule 16 (stmt -> funcdef .)
    COMPLEX         reduce using rule 16 (stmt -> funcdef .)
    LBRACE          reduce using rule 16 (stmt -> funcdef .)
    LBRACKET        reduce using rule 16 (stmt -> funcdef .)
    MINUS           reduce using rule 16 (stmt -> funcdef .)
    INVERT          reduce using rule 16 (stmt -> funcdef .)
    LPAREN          reduce using rule 16 (stmt -> funcdef .)
    TRUE            reduce using rule 16 (stmt -> funcdef .)
    FALSE           reduce using rule 16 (stmt -> funcdef .)
    $end            reduce using rule 16 (stmt -> funcdef .)
    RBRACE          reduce using rule 16 (stmt -> funcdef .)


state 11
